extends Control


#change this so it shows the files and asks for override
func _on_save_one_pressed():
	
	var _vale = get_tree().change_scene("res://test.tscn");


func _on_save_two_pressed():
	var _vale = get_tree().change_scene("res://test.tscn");


func _on_save_three_pressed():
	var _vale = get_tree().change_scene("res://test.tscn");


func _on_save_four_pressed():
	var _vale = get_tree().change_scene("res://test.tscn");
